--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Título de la página</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h2>Ejercicio con ramas</h2>
-    <p>La rama actual va a servir para crear el código HTML</p>
+    <div id="d1">
+        <h2>Ejercicio con ramas</h2>
+        <p>La rama actual va a servir para crear el código HTML</p>
+    </div>
 </body>
 </html>
